# PromptIQ

./: README.md  publish.yml  pyproject.toml
Docs/: ARCHITECTURE.md  CONTRIBUTING.md  JUDGE_GUIDE.md  PUBLISHING.md  README_AR.md  README_ES.md  README_FR.md  README_ZH.md
Tests/: conftest.py  test_cli.py  test_differ.py  test_export.py  test_store.py
examples/: sample_prompt.txt  test_cases.json
promptiq/: __init__.py  ab.py  differ.py  display.py  export.py  store.py
promptiq/judge/: __init__.py  client.py  compare.py  runner.py  static.py  suggest.py
